Update: Inserimento di un Nuovo Giocatore nel Database

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -9,6 +9,10 @@
 	<h1>Home Admin</h1>
 	
 	<div>
+		<a th:href="@{/admin/giocatoreForm}">Inserisci un Nuovo Giocatore</a>
+	</div>
+	
+	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
 </body>
