PROBLEMA: ho aggiunto il codice per poter visualizzare un elenco giocatori e per poter fare la cancellazione. La cancellazione non funziona per non so quale motivo (ho provato di tutto))

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -7,7 +7,9 @@
 
 <body>
 	<h1>Home Utente</h1>
-	
+	<div>
+		<a th:href="@{/user/giocatori}">Elenco giocatori</a>
+	</div>
 	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
