--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8" />
-	<title>Home Admin</title> 
+	<title>Home Admin</title>
 </head>
 
 <body>
 	<h1>Home Admin</h1>
-	
+
 	<div>
 		<a th:href="@{/admin/giocatoreForm}">Inserisci un Nuovo Giocatore</a>
 	</div>
-	
+	<div>
+		<a th:href="@{/admin/giocatori}">Elenco giocatori</a>
+	</div>
 	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
