--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -18,7 +18,7 @@
 				</td>
 				<td>
 					<a href="confermaCancellazioneGiocatore.html"
-						th:href="@{'/toDeleteGiocatore' + '/' + ${giocatore.id}}" th:text="Cancella">Cancella</a>
+						th:href="@{'/admin/toDeleteGiocatore' + '/' + ${giocatore.id}}" th:text="Cancella">Cancella</a>
 				</td>
 			</tr>
 		</table>
