--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -12,10 +12,10 @@
 		<table>
 			<tr th:each="giocatore : ${giocatori}">
 				<td>
-					<!-- <a href="giocatore.html" th:href="@{'/giocatore' + '/' + ${giocatore.id}}"
-						th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Paolo Rossi</a> -->
-						<span th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Paolo Rossi</span>
+					<a href="giocatore.html" th:href="@{'/admin/giocatore' + '/' + ${giocatore.id}}"
+						th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Paolo Rossi</a>
 				</td>
+				
 				<td>
 					<a href="confermaCancellazioneGiocatore.html"
 						th:href="@{'/admin/toDeleteGiocatore' + '/' + ${giocatore.id}}" th:text="Cancella">Cancella</a>
