Piccole modifiche estetiche

--- a/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
- 	<meta charset="UTF-8" />
+	<meta charset="UTF-8" />
 	<title>Giocatore Inserito con Successo</title>
 </head>
 
 <body>
 
-    <h1>Il nuovo Giocatore è stato inserito con successo!</h1>
-    	
-    <div>
-		<a th:href="@{/default}">Torna alla Home</a>
-   	</div>
-    
+	<h1>Il nuovo Giocatore è stato inserito con successo!</h1>
+
+	<div>
+		<a th:href="@{/default}">Torna alla home amministratore</a>
+	</div>
+	<div>
+		<a href="/">Torna alla pagina iniziale</a>
+	</div>
+
 </body>
+
 </html>
