--- a/src/main/resources/templates/admin/cancella/confermaCancellazioneGiocatore.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazioneGiocatore.html
@@ -26,12 +26,16 @@
 	</div>
 	<footer>
 		<div>
-			<a th:href="@{/admin/giocatori}">Torna all'Elenco dei Giocatori</a>
+			<a th:href="@{/admin/giocatori}">Torna all'elenco dei Giocatori</a>
 		</div>
 		<div>
-			<a th:href="@{/default}">Torna alla Home amministratore</a>
+			<a th:href="@{/default}">Torna alla home amministratore</a>
+		</div>
+		<div>
+			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</footer>
+
 </body>
 
 </html>
