--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -31,7 +31,7 @@
 	</div>
 	
 	<div id="tornaHome">
-		<a th:href="@{/index}">Torna alla Pagina Iniziale</a>
+		<a th:href="@{/index}">Torna alla pagina iniziale</a>
 	</div>
 
 </body>
