--- a/src/main/resources/templates/user/elenchi/giocatori.html
+++ b/src/main/resources/templates/user/elenchi/giocatori.html
@@ -20,7 +20,7 @@
 	</div>
 	<footer>
 		<div>
-			<a href="/default">Torna alla home amministratore</a>
+			<a href="/default">Torna alla home utente</a>
 		</div>
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
