--- a/src/main/resources/templates/formRegistrazione.html
+++ b/src/main/resources/templates/formRegistrazione.html
@@ -53,7 +53,7 @@
 	</div>
 	
 	<div id="tornaHome">
-		<a th:href="@{/index}">Torna alla Pagina Iniziale</a>
+		<a th:href="@{/index}">Torna alla pagina iniziale</a>
 	</div>
 
 </body>
