--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -10,10 +10,16 @@
 	<h1>Home Admin</h1>
 
 	<div>
-		<a th:href="@{/admin/giocatoreForm}">Inserisci un Nuovo Giocatore</a>
+		<a th:href="@{/admin/giocatoreForm}">Inserisci un nuovo Giocatore</a>
 	</div>
 	<div>
 		<a th:href="@{/admin/giocatori}">Elenco giocatori</a>
+	</div>
+	<div>
+		<a th:href="@{/admin/squadraForm}">Inserisci una nuova Squadra</a>
+	</div>
+	<div>
+		<a th:href="@{/admin/squadre}">Elenco squadre</a>
 	</div>
 	<div>
 		<a th:href="@{/logout}">Logout</a>
