--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -11,6 +11,9 @@
 		<a th:href="@{/user/giocatori}">Elenco giocatori</a>
 	</div>
 	<div>
+		<a th:href="@{/user/squadre}">Elenco squadre</a>
+	</div>
+	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
 </body>
