--- a/src/main/resources/templates/user/visualizza/squadra.html
+++ b/src/main/resources/templates/user/visualizza/squadra.html
@@ -20,6 +20,24 @@
 		</div>
 		   
 	</div>
+	
+	<div>
+		Elenco dei Giocatori in Rosa:
+		
+		<table>
+			<tr th:each="giocatore : ${elencoGiocatori}">
+				<td>
+					<a th:href="@{'/user/giocatore/' + ${giocatore.id}}" th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Nome Cognome</a>
+				</td>
+				
+				<td>
+					<span th:text="${giocatore.ruolo}" />
+				</td>
+					
+			</tr>
+			
+		</table>
+	</div>
 
 	<div>
 
