--- a/src/main/resources/templates/admin/visualizza/giocatore.html
+++ b/src/main/resources/templates/admin/visualizza/giocatore.html
@@ -34,7 +34,7 @@
 		<div>
 			<span>Squadra: </span>
 			<span th:if="*{giocatore.squadra}">
-				<span th:text="${giocatore.squadra.nome}" />
+				<a th:href="@{'/admin/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 			</span>
 
 			<span th:unless="*{giocatore.squadra}">DA SPECIFICARE</span>
@@ -84,7 +84,10 @@
 	</div>
 
 	<div>
-
+		<div>
+			<a th:href="@{'/admin/assegnaSquadra/' + ${giocatore.id}}">Assegna ad una Squadra</a>
+		</div>
+		
 		<div>
 			<a th:href="@{/admin/giocatori}">Torna all'elenco dei Giocatori</a>
 		</div>
