--- a/src/main/resources/templates/admin/visualizza/squadra.html
+++ b/src/main/resources/templates/admin/visualizza/squadra.html
@@ -10,7 +10,8 @@
 
 	<h1>Dettagli Squadra</h1>
 
-	    <div>
+	<div>
+	
 		<div>
 			<span>Nome: </span><span th:text="*{squadra.nome}">Nome</span>
 		</div>
@@ -19,6 +20,29 @@
 			<em>Sede: </em><em th:text="*{squadra.citta}">Prova</em>
 		</div>
 		   
+	</div>
+	
+	<div>
+		Elenco dei Giocatori in Rosa:
+		
+		<table>
+			<tr th:each="giocatore : ${elencoGiocatori}">
+				<td>
+					<a th:href="@{'/admin/giocatore/' + ${giocatore.id}}" th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Nome Cognome</a>
+				</td>
+				
+				<td>
+					<span th:text="${giocatore.ruolo}" />
+				</td>
+				
+				<td>
+					<a th:href="@{'/admin/rimuoviGiocatore/' + ${giocatore.id}}">Rimuovi</a>
+				</td>
+				
+				
+			</tr>
+			
+		</table>
 	</div>
 
 	<div>
@@ -30,9 +54,11 @@
 		<div>
 			<a th:href="@{/default}">Torna alla home amministratore</a>
 		</div>
+		
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+		
 	</div>
 
 </body>
