--- a/src/main/resources/templates/user/visualizza/giocatore.html
+++ b/src/main/resources/templates/user/visualizza/giocatore.html
@@ -83,6 +83,10 @@
 	<div>
 		
 		<div>
+			<a th:href="@{'/user/prestazioni/' + ${giocatore.id}}">Visualizza le partite giocate</a>
+		</div>
+		
+		<div>
 			<a th:href="@{/user/giocatori}">Torna all'elenco dei Giocatori</a>
 		</div>
 		
