Update: rimozione di Prestazioni per un Giocatore
Co-Authored-By: filvan <97399732+filvan@users.noreply.github.com>

--- a/src/main/resources/templates/admin/elenchi/prestazioni.html
+++ b/src/main/resources/templates/admin/elenchi/prestazioni.html
@@ -15,6 +15,10 @@
 					<a th:href="@{'/admin/prestazione' + '/' + ${prestazione.id}}"
 						th:text="${prestazione.data} + ', giocata contro ' + ${prestazione.squadraAvversaria.nome}">Prestazione</a>
 				</td>
+				
+				<td>
+					<a th:href="@{'/admin/toRimuoviPrestazione/' + ${prestazione.id}}">Rimuovi</a>
+				</td>
 
 			</tr>
 		</table>
