Update: inserite le Classifiche dei Giocatori per ogni Statistica
Co-Authored-By: filvan <97399732+filvan@users.noreply.github.com>

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -14,6 +14,9 @@
 		<a th:href="@{/user/squadre}">Elenco squadre</a>
 	</div>
 	<div>
+		<a th:href="@{/user/classifiche}">Classifiche dei Giocatori per Statistica</a>
+	</div>
+	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
 </body>
