Update: eseguire il Confronto tra due Giocatori
Co-Authored-By: filvan <97399732+filvan@users.noreply.github.com>

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -7,15 +7,23 @@
 
 <body>
 	<h1>Home Utente</h1>
+	
 	<div>
 		<a th:href="@{/user/giocatori}">Elenco giocatori</a>
 	</div>
+	
 	<div>
 		<a th:href="@{/user/squadre}">Elenco squadre</a>
 	</div>
+	
 	<div>
 		<a th:href="@{/user/classifiche}">Classifiche dei Giocatori per Statistica</a>
 	</div>
+	
+	<div>
+		<a th:href="@{/user/toConfrontaGiocatori}">Scegli e Confronta due Giocatori</a>
+	</div>
+	
 	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
