Bug Fixing: visualizzazione (Admin e User) dei dettagli di un Giocatore
Co-Authored-By: filvan <97399732+filvan@users.noreply.github.com>

--- a/src/main/resources/templates/admin/visualizza/giocatore.html
+++ b/src/main/resources/templates/admin/visualizza/giocatore.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<div>
-			<span>Data di Nascita: </span><span th:thext="*{giocatore.dataNascita}">Ruolo</span>
+			<span>Data di Nascita: </span><span th:text="*{giocatore.dataNascita}">Ruolo</span>
 		</div>
 
 		<div>
