--- a/src/main/resources/templates/user/visualizza/giocatore.html
+++ b/src/main/resources/templates/user/visualizza/giocatore.html
@@ -18,7 +18,7 @@
 		</div>
 		
 		<div>
-			<span>Data di Nascita: </span><span th:thext="*{giocatore.dataNascita}">Ruolo</span>
+			<span>Data di Nascita: </span><span th:text="*{giocatore.dataNascita}">Ruolo</span>
 		</div>
 		
 		<div>
