--- a/src/main/resources/templates/user/elenchi/prestazioni.html
+++ b/src/main/resources/templates/user/elenchi/prestazioni.html
@@ -12,8 +12,9 @@
 		<table>
 			<tr th:each="prestazione : ${elencoPrestazioni}">
 				<td>
-					<a th:href="@{'/user/prestazione' + '/' + ${prestazione.id}}"
-						th:text="${prestazione.data} + ', giocata contro ' + ${prestazione.squadraAvversaria.nome}">Prestazione</a>
+					<a th:href="@{'/user/prestazione' + '/' + ${prestazione.id}}" th:text="'Partita del ' + ${prestazione.dataInserita}"/>
+					<span>, giocata contro </span>
+					<a th:href = "@{'/user/squadra/' + ${prestazione.squadraAvversaria.id}}" th:text="${prestazione.squadraAvversaria.nome}">Prestazione</a>
 				</td>
 
 			</tr>
