Tentativo per OAuth

--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -31,6 +31,8 @@
 	</div>
 	
 	<div id="tornaHome">
+		<a th:href="@{/oauth2/authorization/github}">Login with GitHub</a>
+		
 		<a th:href="@{/index}">Torna alla pagina iniziale</a>
 	</div>
 
