Update: specificare un Giocatore preferito (Utente), visualizzare i Giocatori preferiti (Admin)
Co-Authored-By: filvan <97399732+filvan@users.noreply.github.com>

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -21,6 +21,11 @@
 	<div>
 		<a th:href="@{/admin/squadre}">Elenco squadre</a>
 	</div>
+	
+	<div>
+		<a th:href="@{/admin/giocatoriPreferiti}">Elenco dei Giocatori preferiti dalla Community</a>
+	</div>
+	
 	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
