--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -25,6 +25,10 @@
 	</div>
 	
 	<div>
+		<a th:href="@{/user/giocatoriPreferiti}">I tuoi giocatori preferiti</a>
+	</div>
+	
+	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
 </body>
