--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -20,7 +20,7 @@
 					<span th:text="${giocatore.ruolo}" />
 				</td>
 				
-				<td>
+				<td th:if="${giocatore.squadra != null}">
 					<a th:href="@{'/admin/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 				</td>
 				
