Grafica: inserimento del Footer per ogni Pagina

--- a/src/main/resources/templates/admin/cancella/confermaCancellazioneSquadra.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazioneSquadra.html
@@ -21,7 +21,7 @@
 				th:text="Conferma">Conferma</a>
 		</div>
 	</div>
-	<footer>
+	<div>
 		<div>
 			<a th:href="@{/admin/squadre}">Torna all'elenco delle Squadre</a>
 		</div>
@@ -31,8 +31,15 @@
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
-	
+
 </body>
 
 </html>
