--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,6 @@
     	
     	
     <div>
-    	
 		<div class="link">
 			<a th:href="@{/login}">Accedi all'Applicazione</a>
    		</div>
@@ -20,6 +19,13 @@
 			<a th:href="@{/register}">Registrati come nuovo Utente</a>
    		</div>
     </div>
+    
+    <footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
     
 </body>
 </html>
