--- a/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
@@ -17,6 +17,13 @@
 		<a href="/">Torna alla pagina iniziale</a>
 	</div>
 
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
+
 </body>
 
 </html>
