--- a/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatore.html
+++ b/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatore.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8" />
 	<title>Assegna Squadra ad un Giocatore</title>
@@ -9,34 +10,41 @@
 	<div>
 		<h1>Assegna la Squadra al Giocatore</h1>
 	</div>
-	
+
 	<form th:action="@{'/admin/assegnazioneSquadra/' + ${giocatore.id}}" th:method="POST" th:object="${squadra}">
-		
-			<div>
-				<div><strong><span>Seleziona una Squadra :</span></strong></div>
-				<select name="squadra">
-					<option disabled=true>--Elenco delle Squadre--</option>
-					<option th:each="s : ${elencoSquadre}" th:text="${s.nome}" th:value="${s.id}"/>
-				</select>
-			</div>
-			
-			<div>
-				<button type="submit">Assegna</button>
-			</div>
-	
+
+		<div>
+			<div><strong><span>Seleziona una Squadra :</span></strong></div>
+			<select name="squadra">
+				<option disabled=true>--Elenco delle Squadre--</option>
+				<option th:each="s : ${elencoSquadre}" th:text="${s.nome}" th:value="${s.id}" />
+			</select>
+		</div>
+
+		<div>
+			<button type="submit">Assegna</button>
+		</div>
+
 	</form>
-	
+
 	<div>
 		<div>
 			<a th:href="@{'/admin/giocatore/' + ${giocatore.id}}">Torna alla Pagina del Giocatore</a>
 		</div>
-		
+
 		<div>
 			<a th:href="@{/default}">Torna alla Home</a>
 		</div>
-		
-		
+
 	</div>
-	
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
+
 </body>
+
 </html>
