--- a/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatoreConSuccesso.html
+++ b/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatoreConSuccesso.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
- 	<meta charset="UTF-8" />
+	<meta charset="UTF-8" />
 	<title>Giocatore assegnato con Successo</title>
 </head>
+
 <body>
 
-    <div>
-    	<h1>Il Giocatore selezionato è stato assegnato con Successo!</h1>
-    </div>
-    	
-    <div>
-    	
-    	<div>
-    		<a th:href="@{/admin/giocatori}">Vai all'Elenco dei Giocatori</a>
-    	</div>
-    	
-    	<div>
+	<div>
+		<h1>Il Giocatore selezionato è stato assegnato con Successo!</h1>
+	</div>
+
+	<div>
+
+		<div>
+			<a th:href="@{/admin/giocatori}">Vai all'Elenco dei Giocatori</a>
+		</div>
+
+		<div>
 			<a th:href="@{/default}">Torna alla Home</a>
-   		</div>
-    </div>
-    
+		</div>
+	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
+
 </body>
+
 </html>
