--- a/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazione.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazione.html
@@ -12,12 +12,11 @@
 
 		<div>
 			<strong>Confermi di voler cancellare questa Prestazione?</strong>
-			<a th:href="@{'/admin/rimozionePrestazione/' + ${prestazione.id}}"
-				th:text="Conferma">Conferma</a>
+			<a th:href="@{'/admin/rimozionePrestazione/' + ${prestazione.id}}" th:text="Conferma">Conferma</a>
 		</div>
 	</div>
-	
-	<footer>
+
+	<div>
 
 		<div>
 			<a th:href="@{/default}">Torna alla home amministratore</a>
@@ -25,6 +24,13 @@
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 
 </body>
