--- a/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazioneConSuccesso.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazioneConSuccesso.html
@@ -10,14 +10,21 @@
 	<div>
 		<h1>La Prestazione è stata cancellata con successo!</h1>
 	</div>
-	
-	<footer>
+
+	<div>
 		<div>
 			<a th:href="@{/default}">Torna alla home amministratore</a>
 		</div>
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 
 </body>
