--- a/src/main/resources/templates/admin/elenchi/squadre.html
+++ b/src/main/resources/templates/admin/elenchi/squadre.html
@@ -24,15 +24,22 @@
 		</table>
 		<a href="admin/squadraForm.html" th:href="@{/admin/squadraForm}">Inserisci una squadra</a>
 	</div>
-	<footer>
+	<div>
 		<div>
 			<a href="/default">Torna alla home amministratore</a>
 		</div>
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
-	
+
 </body>
 
 </html>
