--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -21,14 +21,21 @@
 	<div>
 		<a th:href="@{/admin/squadre}">Elenco squadre</a>
 	</div>
-	
+
 	<div>
 		<a th:href="@{/admin/giocatoriPreferiti}">Elenco dei Giocatori preferiti dalla Community</a>
 	</div>
-	
+
 	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
 </body>
 
 </html>
