--- a/src/main/resources/templates/admin/visualizza/prestazione.html
+++ b/src/main/resources/templates/admin/visualizza/prestazione.html
@@ -20,7 +20,8 @@
 			<tr>
 				<td>Squadra Avversaria: </td>
 				<td>
-					<a th:href="@{'/admin/squadra/' + ${prestazione.squadraAvversaria.id}}" th:text="*{prestazione.squadraAvversaria.nome}" />
+					<a th:href="@{'/admin/squadra/' + ${prestazione.squadraAvversaria.id}}"
+						th:text="*{prestazione.squadraAvversaria.nome}" />
 				</td>
 			</tr>
 
@@ -68,6 +69,13 @@
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
 
 </body>
 
