--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8" />
-	<title>Login Utente</title> 
+	<title>Login Utente</title>
 </head>
+
 <body>
 
-    <div id="intestazione">
-    	<h1>Login</h1>
-    </div>
-    
+	<div id="intestazione">
+		<h1>Login</h1>
+	</div>
+
 	<div id="form">
 		<form th:action="@{/login}" method="POST">
 			<table>
-    			<tr>
-    				<td>Username: </td>
-    				<td><input type="text" name="username" /></td>
-    			</tr>
-    			
-    			<tr>
-    				<td>Password: </td>
-    				<td><input type="password" name="password" /></td>
-    			</tr>
-    			
-    			<tr>    			
-    				<td><button type="submit">Login</button></td>
-    			</tr>
+				<tr>
+					<td>Username: </td>
+					<td><input type="text" name="username" /></td>
+				</tr>
+
+				<tr>
+					<td>Password: </td>
+					<td><input type="password" name="password" /></td>
+				</tr>
+
+				<tr>
+					<td><button type="submit">Login</button></td>
+				</tr>
 			</table>
-    	</form>
+		</form>
 	</div>
-	
+
 	<div id="tornaHome">
 		<a th:href="@{/index}">Torna alla pagina iniziale</a>
 	</div>
 
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
+
 </body>
+
 </html>
