--- a/src/main/resources/templates/formRegistrazione.html
+++ b/src/main/resources/templates/formRegistrazione.html
@@ -55,6 +55,13 @@
 	<div id="tornaHome">
 		<a th:href="@{/index}">Torna alla pagina iniziale</a>
 	</div>
+	
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
 
 </body>
 </html>
