--- a/src/main/resources/templates/user/confronta/confrontaGiocatori.html
+++ b/src/main/resources/templates/user/confronta/confrontaGiocatori.html
@@ -84,7 +84,7 @@
 		</div>
 		   
 	</div>
-	
+
 	<h2>Secondo Giocatore</h2>
 
 	<div>
@@ -165,7 +165,7 @@
 		<div>
 			<a th:href="@{/user/toConfrontaGiocatori}">Esegui un nuovo Confronto</a>
 		</div>
-		
+
 		<div>
 			<a th:href="@{/default}">Torna alla home utente</a>
 		</div>
@@ -174,6 +174,13 @@
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
 
 </body>
 
