--- a/src/main/resources/templates/user/confronta/toConfrontaGiocatori.html
+++ b/src/main/resources/templates/user/confronta/toConfrontaGiocatori.html
@@ -48,6 +48,13 @@
 	<div>
 		<a th:href="@{/logout}">Logout</a>
 	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
 </body>
 
 </html>
