--- a/src/main/resources/templates/user/elenchi/giocatoriPreferiti.html
+++ b/src/main/resources/templates/user/elenchi/giocatoriPreferiti.html
@@ -15,27 +15,34 @@
 					<a href="giocatore.html" th:href="@{'/user/giocatore' + '/' + ${giocatore.id}}"
 						th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Paolo Rossi</a>
 				</td>
-				
+
 				<td>
 					<span th:text="${giocatore.ruolo}" />
 				</td>
-				
+
 				<td th:if="${giocatore.squadra} != null">
 					<a th:href="@{'/user/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 				</td>
-				
+
 				<td>
 					<a th:href="@{'/user/rimuoviGiocatorePreferito/' + ${giocatore.id}}">Rimuovi</a>
 				</td>
 			</tr>
 		</table>
 	</div>
-	<footer>
+	<div>
 		<div>
 			<a href="/default">Torna alla home utente</a>
 		</div>
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+	</div>
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 </body>
