--- a/src/main/resources/templates/user/elenchi/prestazioni.html
+++ b/src/main/resources/templates/user/elenchi/prestazioni.html
@@ -12,16 +12,18 @@
 		<table>
 			<tr th:each="prestazione : ${elencoPrestazioni}">
 				<td>
-					<a th:href="@{'/user/prestazione' + '/' + ${prestazione.id}}" th:text="'Partita del ' + ${prestazione.dataInserita}"/>
+					<a th:href="@{'/user/prestazione' + '/' + ${prestazione.id}}"
+						th:text="'Partita del ' + ${prestazione.dataInserita}" />
 					<span>, giocata contro </span>
-					<a th:href = "@{'/user/squadra/' + ${prestazione.squadraAvversaria.id}}" th:text="${prestazione.squadraAvversaria.nome}">Prestazione</a>
+					<a th:href="@{'/user/squadra/' + ${prestazione.squadraAvversaria.id}}"
+						th:text="${prestazione.squadraAvversaria.nome}">Prestazione</a>
 				</td>
 
 			</tr>
 		</table>
 	</div>
-	
-	<footer>
+
+	<div>
 		<div>
 			<a th:href="@{'/user/giocatore/' + ${giocatore.id}}">Torna alla pagina del Giocatore</a>
 		</div>
@@ -31,8 +33,15 @@
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
-	</footer>
+	</div>
 	
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
+
 </body>
 
 </html>
