--- a/src/main/resources/templates/user/elenchi/squadre.html
+++ b/src/main/resources/templates/user/elenchi/squadre.html
@@ -18,12 +18,19 @@
 			</tr>
 		</table>
 	</div>
-	<footer>
+	<div>
 		<div>
 			<a href="/default">Torna alla home utente</a>
 		</div>
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
+	</div>
+	
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 </body>
