--- a/src/main/resources/templates/user/visualizza/giocatore.html
+++ b/src/main/resources/templates/user/visualizza/giocatore.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8" />
 	<title>Dettagli Giocatore User</title>
 </head>
+
 <body>
 
-    <h1>Dettagli Giocatore</h1>
-        	
-    <div>
+	<h1>Dettagli Giocatore</h1>
+
+	    <div>
 		<div>
 			<span>Nome: </span><span th:text="*{giocatore.nome}">Nome</span>
 		</div>
-		
+
 		<div>
 			<span>Cognome: </span><span th:text="*{giocatore.cognome}">Cognome</span>
 		</div>
-		
+
 		<div>
 			<span>Data di Nascita: </span><span th:text="*{giocatore.dataNascita}">Ruolo</span>
 		</div>
-		
+
 		<div>
 			<span>Nazionalità: </span><span th:text="*{giocatore.nazionalita}">Nazionalita</span>
 		</div>
-		
+
 		<div>
 			<span>Ruolo: </span><span th:text="*{giocatore.ruolo}">Ruolo</span>
 		</div>
-		
+
 		<div>
 			<span>Squadra: </span>
 			<span th:if="*{giocatore.squadra}">
 				<a th:href="@{'/user/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 			</span>
-			
+
 			<span th:unless="*{giocatore.squadra}">DA SPECIFICARE</span>
 		</div>
-		
+
 		<div>
 			<p>Dati sulla Stagione: </p>
 			<table>
@@ -45,66 +47,75 @@
 					<td>Presenze Totali: </td>
 					<td th:text="*{giocatore.presenzeTotali}">Presenze Totali</td>
 				</tr>
-				
+
 				<tr>
 					<td>Minuti Giocati: </td>
 					<td th:text="*{giocatore.minutiGiocatiTotali}">Minuti Giocati Totali</td>
 				</tr>
-				
+
 				<tr th:if="*{giocatore.ruolo == 'Portiere' || giocatore.ruolo == 'Difensore'}">
 					<td>Porte Inviolate: </td>
 					<td th:text="*{giocatore.cleanSheetTotali}">Clean Sheet Totali</td>
 				</tr>
-				
+
 				<tr th:if="*{giocatore.ruolo != 'Portiere'}">
 					<td>Gol Segnati: </td>
 					<td th:text="*{giocatore.golSegnatiTotali}">Gol Segnati Totali</td>
 				</tr>
-				
+
 				<tr th:if="*{giocatore.ruolo != 'Portiere'}">
 					<td>Assist Forniti: </td>
 					<td th:text="*{giocatore.assistTotali}">Assist Totali</td>
 				</tr>
-				
+
 				<tr>
 					<td>Ammonizioni: </td>
 					<td th:text="*{giocatore.ammonizioniTotali}">Ammonizioni</td>
 				</tr>
-				
+
 				<tr>
 					<td>Espulsioni: </td>
 					<td th:text="*{giocatore.espulsioniTotali}">Espulsioni</td>
 				</tr>
-					
+
 			</table>
 		</div>
-    </div>
-	
+		   
+	</div>
+
 	<div>
 		<div th:if="${condizione == false}">
 			<a th:href="@{'/user/addGiocatorePreferito/' + ${giocatore.id}}">Aggiungi ai Giocatori Preferiti</a>
 		</div>
-		
+
 		<div th:unless="${condizione == false}">
 			<span>Questo Giocatore è tra i tuoi </span>
 			<a th:href="@{/user/giocatoriPreferiti}" th:text="preferiti" />
 		</div>
-		
+
 		<div>
 			<a th:href="@{'/user/prestazioni/' + ${giocatore.id}}">Visualizza le partite giocate</a>
 		</div>
-		
+
 		<div>
 			<a th:href="@{/user/giocatori}">Torna all'elenco dei Giocatori</a>
 		</div>
-		
+
 		<div>
 			<a th:href="@{/default}">Torna alla home utente</a>
 		</div>
 		<div>
 			<a href="/">Torna alla pagina iniziale</a>
-		</div>	
+		</div>
 	</div>
-	
+
+	<footer>
+		<div>Realizzato da: </div>
+		<div>Riccardo De Cesaris - Matricola: 547762</div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
+	</footer>
+
 </body>
+
 </html>
