--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco Giocatori Admin</title>
+	<link rel="stylesheet" href="/giocatore.css">
 </head>
 
 <body>
@@ -15,18 +16,21 @@
 					<a href="giocatore.html" th:href="@{'/admin/giocatore' + '/' + ${giocatore.id}}"
 						th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Paolo Rossi</a>
 				</td>
-				
+
 				<td>
 					<span th:text="${giocatore.ruolo}" />
 				</td>
-				
+
 				<td th:if="${giocatore.squadra != null}">
 					<a th:href="@{'/admin/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 				</td>
-				
+
 				<td>
-					<a href="confermaCancellazioneGiocatore.html"
-						th:href="@{'/admin/toDeleteGiocatore' + '/' + ${giocatore.id}}" th:text="Cancella">Cancella</a>
+					<div class="button">
+						<a class="button" href="confermaCancellazioneGiocatore.html"
+							th:href="@{'/admin/toDeleteGiocatore' + '/' + ${giocatore.id}}"
+							th:text="Cancella">Cancella</a>
+					</div>
 				</td>
 			</tr>
 		</table>
@@ -40,7 +44,7 @@
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</footer>
-	
+
 </body>
 
 </html>
